--- a/bowl_of_nouns/pubspec.yaml
+++ b/bowl_of_nouns/pubspec.yaml
@@ -24,9 +24,10 @@ dependencies:
   flutter:
     sdk: flutter
 
-  firebase_core: ^0.4.0+9
-  firebase_analytics: ^5.0.2
-  firebase_auth: ^0.14.0+5
+  firebase_core: ^1.0.1
+  firebase_auth: ^1.0.1
+  #firebase_analytics: ^5.0.2
+  #firebase_auth: ^0.14.0+5
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.0
