--- a/bowl_of_nouns/pubspec.yaml
+++ b/bowl_of_nouns/pubspec.yaml
@@ -26,6 +26,7 @@ dependencies:
 
   firebase_core: ^1.0.1
   firebase_auth: ^1.0.1
+  firebase_database: ^6.1.0
   #firebase_analytics: ^5.0.2
   #firebase_auth: ^0.14.0+5
   # The following adds the Cupertino Icons font to your application.
